--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -6,20 +6,22 @@
         <!--rake routesでpost_like_pathを見る限りpost_idとlike_idを渡さなければいけない。
         post.like_userはlikeモデルのインスタンスを返し、：のキーを付ける必要ない-->
         <%= button_to post_like_path(post.like_user(current_user.id), post_id: post.id), 
-        method: :delete,id: "like-buttons",class: "like-button_already", remote: true do %>  
+        method: :delete,id: "like-buttons",class: "like-button_already", remote: true do%>  
         
             
- 
+    <% end %>
     <% else %>
  
       <!--button＿toメソッドはデフォルトでpostメソッドhtmlを行う-->
-        <%= button_to post_likes_path(post), id: "like-buttons",class: "like-button_yet", remote: true do %>
+        <%= button_to post_likes_path(post), id: "like-buttons",class: "like-button_yet", remote: true do%>
           
       
 
     
-    
     <% end %>
+    <% end %>
+    
+  <br>  
     
   <p>いいね！数：<%= post.likes_count %></p> <p>  コメント数：<%= post.comments_count %></p>
  
