--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,18 @@
-<div class="contents row">
-    <div class="user_image"><%= image_tag @user.avatar %></div>
-    <p><%= @user.nickname %>さんの自己紹介</p>
-    <p><%= @user.introduction %></p>
+<div class="contentsrow">
+    <div class="user_image"><%= image_tag @user.avatar ,:class => "your_icon_image" %></div>
+    <br>
+    <p class= "fukidashi"><%= @user.nickname %>さんの自己紹介<br>
+    <%= @user.introduction %></p>
+    <br>
+   
+    
+    <br>
     
     <% if current_user.id == @user.id %>
     <%=link_to "ユーザー登録情報を変更する",edit_user_path, method: :get %>
     <% end %>
-    
+   
+    <br>
     <p><%= @user.nickname %>さんの投稿一覧</p>
    
        <%= render partial: "posts/posts" %>
