--- a/app/assets/stylesheets/original.css.scss
+++ b/app/assets/stylesheets/original.css.scss
@@ -33,13 +33,21 @@ a {
   
 
 
+
+
 header.header {
     background-color: #fff;
     border-bottom: 1px solid $gray;
     height: 300px;
-    background-image: url("/images/top (1).jpg");
+    background-image: url("");
     background-size: cover;
     
+    
+    
+        img.title{
+          margin: 0,auto;
+        }
+
     
     div.header__bar {
       
@@ -135,7 +143,9 @@ header.header {
           border-color: $mizuiro;
           border-width: 3px;
           margin:0 auto;
+          
         }
+        
 
  
  .poster_image {
@@ -158,6 +168,12 @@ header.header {
             
         }
 
+ .anonimous_image{
+               width:auto;
+            height:auto;
+            max-width:100%;
+            max-height:100%;
+ }
 
 
 
@@ -187,6 +203,11 @@ header.header {
   cursor: pointer;
   font-size:20px;
   padding: 5px 10px;
+  color: $mizuiro;
+  &:hover{
+    color:$black;
+  }
+  
 }
 .treemenu .lv1body {
   display: none;
@@ -199,10 +220,12 @@ header.header {
 .treemenu .lv1body .lv2btn {
   cursor: pointer;
   padding: 5px 10px 5px 0;
+  
 }
 .treemenu .lv1body .lv2body {
   display: none;
   padding: 0 10px 5px 10px;
+  
 }
 .treemenu .lv1body .lv2body a {
   line-height: 2.0;
@@ -252,6 +275,12 @@ header.header {
 .post_head_foot{
   background-color: #f0fff0;
   padding: 10px;
+  border-radius: 15px;
+  
+  h2.title{
+    border-radius: 15px;
+    background-color: #FFEEFF;
+  }
   
   :after{
     clear:both;
@@ -273,6 +302,10 @@ header.header {
     }
 }
 
+
+#posts_title{
+  font-size: 24px;
+}
 
 
 
@@ -317,3 +350,39 @@ footer {
   
 
 }
+
+
+
+
+// ユーザーページのユーザー情報について
+
+.contentsrow{
+ 
+   p.fukidashi{
+     position: relative;
+	display: inline-block;
+ 	margin: 1.5em 0;
+	padding: 7px 10px;
+	min-width: 120px;
+ 	max-width: 100%;
+ 	color: #555;
+	font-size: 16px;
+	background: #e0edff;
+	border-radius: 15px;
+   }
+  
+   p.fukidashi:before{
+	content: "";
+	position: absolute;
+	top: -30px;
+	left: 50%;
+ 	margin-left: -15px;
+	border: 15px solid transparent;
+	border-bottom: 15px solid #e0edff;
+   
+     
+   } 
+}
+
+
+
