--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="contentsrow">
     <div class="user_image"><%= image_tag @user.avatar ,:class => "your_icon_image" %></div>
     <br>
-    <p class= "fukidashi"><%= @user.nickname %>さんの自己紹介<br>
+    <p class= "fukidashi"><%= @user.nickname %>さんの自己紹介<br><br>
     <%= @user.introduction %></p>
     <br>
    
@@ -9,11 +9,11 @@
     <br>
     
     <% if current_user.id == @user.id %>
-    <%=link_to "ユーザー登録情報を変更する",edit_user_path, method: :get %>
+     <p class="mannnaka"><%=link_to "ユーザー登録情報を変更する",edit_user_path, method: :get %></p>
     <% end %>
    
     <br>
-    <p><%= @user.nickname %>さんの投稿一覧</p>
+    <p class="mannnaka"><%= @user.nickname %>さんの投稿一覧</p>
    
        <%= render partial: "posts/posts" %>
        
