--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     
     <br>
     
-    <% if current_user.id == @user.id %>
+    <% if user_signed_in? && current_user.id == @user.id %>
      <p class="mannnaka"><%=link_to "ユーザー登録情報を変更する",edit_user_path, method: :get %></p>
     <% end %>
    
