いいね機能を修正

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -43,6 +43,10 @@
   </div>
 <% end %>
 
+  <h2>twitterアカウントでログイン・投稿できるようにする</h2>
+  <%= link_to "twitterアカウントでログイン", user_twitter_omniauth_authorize_path, class: 'post' %>
+                  
+
 </div>
 
 <%# render "devise/shared/links" %>
