--- a/app/views/posts/_modal.html.erb
+++ b/app/views/posts/_modal.html.erb
@@ -10,9 +10,9 @@
     data: { toggle: "modal", target: "#{modalid}" }, :style =>"cursor:pointer"  %>
 
 <%= content_tag(:div, :class => 'modal fade', :id => "#{modalname}", :size => "1000×800" ) do %>
-    <div class="modal-dialog modal-lg modal-middle">
-        <div class="modal-body">
-            <%= image_tag (imagetexts.image), :size => "1000×800" , :class => "img-responsive thumbnail aligncenter size-full wp-image-425"  %>
+    <div class="modal-dialog modal-lg modal-middle　modal-lg-extend"　>
+        <div class="modal-body" >
+            <%= image_tag (imagetexts.image), :size => "2000×1000" , :class => "img-responsive thumbnail aligncenter size-full wp-image-425"  %>
         </div>
         
         <div class="modal-img_footer">
