--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,5 +1,5 @@
 <div class="content_row">
-  <p>カテゴリーを増やそう</p>
+  <p><h3>カテゴリーを増やそう☆</h3></p>
       <br>
   
   <div class="container">
@@ -7,7 +7,7 @@
       <div class="field">
     
         <%= f.label :name, "カテゴリー名" %>
-        <%= f.text_field :name%>
+        <%= f.text_field :name , :size => "50"%>
       
       </div>
   
