--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,7 +30,7 @@
   
   <div class="field">
     <%= f.label :introduction %><br />
-    <%= f.text_field :introduction, autocomplete: "off" %>
+    <%= f.text_area :introduction, autocomplete: "off", :size=>"60x10" %>
   </div>
   
    <h2>プロフィール画像</h2>
