--- a/app/views/users/twitter.html.erb
+++ b/app/views/users/twitter.html.erb
@@ -2,6 +2,9 @@
 
   <h2>twitterアカウントでログイン・投稿できるようにする</h2>
   <%= link_to "twitterアカウントでログイン", user_twitter_omniauth_authorize_path, class: 'post' %>
+  
+  <2>トップページに戻る</2>
+  <%= link_to "トップページにもどる", root_path %>
                   
 
 </div>
