--- a/app/assets/stylesheets/original.css.scss
+++ b/app/assets/stylesheets/original.css.scss
@@ -41,6 +41,7 @@ header.header {
     height: 300px;
     background-image: url("");
     background-size: cover;
+    width: 100%;
     
     
     
@@ -83,29 +84,138 @@ header.header {
 
 // レスポンシブなデザインにするよ
 
+#user_recentcomment{
+ float: right;
+}
 
-// @media (min-width: 1351){
-//   #user{
-//     width: 100px;
-//     height: 150px;
-//     float: right;
-  
-//   }
-// }
 
  #user{
+
+    padding: 20px;
     height: 150px;
-    float: right;
+   
     margin: auto;
     width: 200px;
-    // &:after{
-
-    // content:"";
-    // display:block;
-  
-  // }
-  // }
+   
 }
+
+
+
+
+
+ /*　画面サイズが750pxから1460pxまではここを読み込む　*/
+@media screen and (min-width: 751px) and (max-width: 1460px){
+   
+    
+header{
+  width: 1560px!important;
+}
+    
+    
+    
+    #user_recentcomment{
+  position: absolute;
+  top: 300px; left: 1200px;
+}
+
+ #user{
+    padding: 20px;
+    height: 150px;
+    margin: auto;
+    width: 200px;
+    
+   
+}
+
+
+
+
+}
+
+
+ /*　画面サイズが750pxまではここを読み込む　*/
+@media screen and (max-width: 750px){
+
+header{
+  width: 780px!important;
+}
+
+img.title{
+    width: 80%!important;
+   
+        }
+    
+#user_recentcomment{
+  
+  float: none!important;
+  position: static!important;
+  display: block;
+  margin: auto!important;
+  width: 100%!important;
+
+}
+
+ #user{
+    padding: 20px;
+    height: 150px;
+    margin: auto;
+    width: 200px;
+    margin: auto!important;
+   
+}
+#recent_comments{
+  
+  display: none;
+}
+
+#menu {
+  
+  height: auto!important;
+  display: block;
+  margin: auto!important;
+  width: 100%!important;
+  
+  h2{
+    text-align: center!important;
+  }
+    
+}
+
+#index{
+  position: static!important;
+  margin: auto!important;
+  width: 100%!important;
+}
+
+.render_post {
+    margin: auto!important;
+    padding: 15px 15px 15px 15px !important;
+    border-width: 1;
+    border-color: $mizuiro;
+    border-style: solid;
+    border-radius: 10px;
+    width: 430px!important;
+    h3 {
+      font-size: 20px;
+    }
+    
+    p.subtitle{
+      margin: 10px 0px;
+      font-size: 200%;
+      border-bottom: 1px solid #ddd;
+    }
+    
+    p.content{
+      margin: 50px 0px;
+    }
+    
+    
+}
+
+}
+
+
+
 
 
   #user div.user_nav {
@@ -141,9 +251,7 @@ header.header {
         top: 46px;
         right: 0;
         width: 200px;
-        // border-left: 1px solid #d8d8d8;
-        // border-right: 1px solid #d8d8d8;
-        // box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
+       
         &:hover{
           display: block;
         }
@@ -177,6 +285,20 @@ header.header {
           
         }
         
+  .div_your_icon_image {
+          margin-left:auto;
+          width: 200px;
+          height: 200px;
+          overflow: hidden;
+          border-radius: 200px;
+          border-color: $mizuiro;
+          border-width: 3px;
+          margin: auto;
+       
+          
+        }      
+  
+        
 
  
  .poster_image {
@@ -187,6 +309,18 @@ header.header {
           border-radius: 60px;
           border-color: $mizuiro;
           border-width: 3px;
+          
+        }
+        
+  .poster_image2 {
+          float:right;
+          width: 60px;
+          height: 60px;
+          overflow: hidden;
+          border-radius: 60px;
+          border-color: $mizuiro;
+          border-width: 3px;
+          display: inline;
           
         }
         
@@ -215,6 +349,8 @@ header.header {
   float: left;
   display: block;
   margin: 0  0;
+  
+  width: 270px;
     
 }
 
@@ -279,22 +415,15 @@ header.header {
 
 
 
-
-
-
-@media (max-width: 1500px){
 #index{
-  float:left;
-}
+  float: left;
+  width: 50%;
+  // position: absolute;
+  // top: 300px; left: 250px;
 }
 
 
-@media (min-width: 1501px){
-  
-  #index{
-    float:left;
-  }
-}
+
 
 
 .oyabody{
@@ -302,7 +431,17 @@ header.header {
 
 }
 
+
+// クリアフィックス
+
 .clearfix:after {
+  clear : both;
+  content: "";
+  display: block;
+  
+}
+
+#clearfix:after {
   clear : both;
   content: "";
   display: block;
@@ -341,11 +480,27 @@ header.header {
     h3 {
       font-size: 20px;
     }
+    
+    p.subtitle{
+      margin: 10px 0px;
+      font-size: 200%;
+      border-bottom: 1px solid #ddd;
+    }
+    
+     p.content{
+      margin: 50px 0px;
+    }
+    
+    
 }
 
 
 #posts_title{
   font-size: 24px;
+}
+
+#posts_title2{
+  font-size: 18px;
 }
 
 
@@ -358,17 +513,25 @@ header.header {
 
 // ユーザーページのユーザー情報について
 
-.contentsrow{
- 
+
+
+.introduction_recentcomment{
+  
+  // float:left;
+  padding: 20px;
+  width: 100%;
+  
+
  
  //ここから吹き出し
-   .fukidashi {
+   p.fukidashi {
+  // width: 100%;
  	position: relative;
 	display: block;
  	margin: 0,auto;
 	padding: 7px 10px;
 	min-width: 120px;
- 	max-width: 100%;
+ 	width: 100%;
  	color: #555;
 	font-size: 16px;
 	background: #FFF;
@@ -378,7 +541,7 @@ header.header {
  	
 }
 
-.fukidashi:before{
+p.fukidashi:before{
 	content: "";
 	position: absolute;
 	top: -24px;
@@ -389,7 +552,7 @@ header.header {
  	z-index: 2;
 }
 
-.fukidashi:after{
+p.fukidashi:after{
 	content: "";
 	position: absolute;
 	top: -30px;
@@ -400,10 +563,7 @@ header.header {
  	z-index: 1;
 }
 
-.fukidashi p {
-	margin: 0;
-	padding: 0;
-}
+
 
 //ここまで吹き出し
 }
@@ -464,8 +624,8 @@ textarea{
 }
 
 footer {
-  clear: both;
-  
+  clear:both
+
 }
 
 
@@ -474,7 +634,7 @@ footer {
 .nav {
   width: 750px;
   height: 40px;
-  margin: 0 auto;
+  margin-left: 50px;
   padding: 0;
   display: flex;
 }
@@ -484,7 +644,7 @@ footer {
 }
 .nav li a {
   display: block;
-  width: 200px;
+  width: 300px;
   height: 40px;
   text-align: center;
   color: #fff;
@@ -521,49 +681,86 @@ footer {
   overflow: visible;
   height: 40px;
 }
-//   .nav li ul li ul {
-//     top: 0;
-//     left: 110px;
-//   }
-//   .nav li ul li ul:before {/*layer-2▷*/
-//     position: absolute;
-//     content: "";
-//     top: 15px;
-//     left: 30px;
-//     border: 5px solid transparent;
-//     border-left: 5px solid #fff;
-//   }
-//   .nav li ul li ul li:hover > a {/*layer-3*/
-//     color: pink;
-//     background: #afc6e2;
-//   }
-//   .nav li ul li ul.left {
-//     top: 0;
-//     left: -190px;
-//   }
-//   .nav li ul li ul.left:before,/*layer-2-left▷*/
-//   .nav li ul li ul li ul.left:before {/*layer-3-left▷*/
-//     position: absolute;
-//     content: "";
-//     top: 15px;
-//     left: 190px;
-//     border: 5px solid transparent;
-//     border-right: 5px solid #fff;
-//   }
-//   .nav li ul li ul.left li:hover > a {/*layer-2-left*/
-//     color: pink;
-//     background: #afc6e2;
-//   }
-//   .nav li ul li ul li ul.left li:hover > a {/*layer-3-left*/
-//     color: purple;
-//     background: #afc6e2;
-//   }
-// .content {
-//   width: 750px;
-//   height: 200px;
-//   background: #eee;
-//   margin: 0 auto;
-//   padding: 10px;
-//   text-align: left;
-//   box-sizing: border-box;
-// }
+
+
+
+
+
+
+
+
+.modal-lg-extend {
+    width: 1200px;
+}
+
+
+
+  // 最近コメントのあった投稿
+
+
+#recent_comments{
+  
+    margin: 310px 0px;
+    padding: 10px 10px 10px 10px ;
+    border-width: 0.5;
+    border-color: #bbb;
+    border-style: solid;
+    border-radius: 10px;
+    width: 350px;
+    
+
+  
+}
+
+
+  
+.recent_comment{
+  
+  margin: 50px 0px;
+    
+   
+      ::after{
+      display:block;
+      content: "";
+    }
+}
+
+
+.recent_comment_poster_image {
+          float:left;
+          width: 45px;
+          height: 45px;
+          overflow: hidden;
+          border-radius: 45px;
+          border-color: $mizuiro;
+          border-width: 2px;
+          
+        }
+
+
+.recent_comment_icon_image, .recent_comment_anonimous_image {
+          
+          width: 100px;
+          height: 100px;
+          overflow: hidden;
+          border-radius: 100px;
+          border-color: $mizuiro;
+          border-width: 3px;
+          margin: auto;
+       
+          
+        }      
+  
+.content_row{
+  margin: 0px 0px 100px 0px;
+}
+
+
+
+
+
+.twitter{
+  margin: auto ;
+}
+
+
