--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,10 @@
 <div class="contents row">
-<h2>Sign up</h2>
+<h2>~Sign up（登録）~</h2>
+
+<% text = "<h4>twitterアカウントでサインインしたい方も、最初にこちらで登録をお願い致します.\n
+登録以降はtwitterアカウントでサインイン可能になります。</h4>" %>
+
+<%= simple_format text %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -30,7 +35,7 @@
   
   <div class="field">
     <%= f.label :introduction %><br />
-    <%= f.text_field :introduction, autocomplete: "off" %>
+    <%= f.text_area :introduction, autocomplete: "off", :size=>"60x10" %>
   </div>
   
   <div class="field">
