--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -6,8 +6,8 @@
     <!--  </a>-->
 
     <!--  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">-->
-    <!--    <a class="dropdown-item" href="/tools/<%= params[:id] %>">投稿が新しい順</a>-->
-    <!--    <a class="dropdown-item" href="/tools/<%= params[:id] %>/ranking">いいね！ランキング順</a>-->
+    <!--    <a class="dropdown-item" href="/tools/<= params[:id] %>">投稿が新しい順</a>-->
+    <!--    <a class="dropdown-item" href="/tools/<= params[:id] %>/ranking">いいね！ランキング順</a>-->
     <!--  </div>-->
     <!--</div>-->
     
@@ -15,11 +15,15 @@
 
       <li><a href="#">投稿を並び替えする</a>
         <ul>
-          <li><a href="/">投稿が新しい順</a></li>
-          <li><a href="/ranking">いいね！ランキング順</a></li>
+            
+            
+          <li><a href="/tools/<%= params[:id] %>">投稿が新しい順（<%= @tool.name %>）</a></li>
+          <li><a href="/tools/<%= params[:id] %>/show_ranking">いいね！ランキング順（<%= @tool.name %>）</a></li>
         </ul>
       </li>
     </ul>
+    
+     <span>カテゴリ：<%= @tool.name %></span>
 
 
      <%= render partial: "posts/posts" %>
@@ -29,6 +33,6 @@
   </div>
   
   
-    
+    <%= paginate(@posts) %>
   
 </div>
