--- a/app/views/tools/show_ranking.html.erb
+++ b/app/views/tools/show_ranking.html.erb
@@ -14,14 +14,18 @@
 
       <li><a href="#">投稿を並び替えする</a>
         <ul>
-          <li><a href="/">投稿が新しい順</a></li>
-          <li><a href="/ranking">いいね！ランキング順</a></li>
+          <li><a href="/">投稿が新しい順（<%= @tool.name %>）</a></li>
+          <li><a href="/ranking">いいね！ランキング順（<%= @tool.name %>）</a></li>
         </ul>
       </li>
     </ul>
+    
+    <span>　　カテゴリ：<%= @tool.name %></span>
 
 
      <%= render partial: "posts/posts" %>
+     
+     <%= paginate(@posts) %>
   
 </div>
   
